# visota

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODEOWNERS  Dockerfile  Makefile  PROMPT_FIX_DEPLOY.md  README.md  check_env.py  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  pytest_e2e.ini  requirements.txt  run_server.bat  start_server.ps1
.devcontainer/: devcontainer.json
.factory/: branding-investigation.md  compliance-audit.md  dogfood-roles-investigation.md  eval-final-report.md  eval-phase1a.md  eval-phase1b.md  eval-phase1c.md  eval-review-accounting.md  eval-review-modules.md  eval-review-payroll.md  eval-review-security.md  eval-review-transactions.md  pkm-deep-investigation.md  pkm-sensitive-data-analysis.md  pkm-storage-analysis.md  regulatory-research.md  tax-investigation.md  tt58-investigation.md
.github/: dependabot.yml  labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml  sentry-tracking.yml
apps/approvals/: apps.py  context_processors.py  models.py  services.py  urls.py  views.py
apps/assets/: apps.py
apps/banking/: apps.py  models.py  services.py  urls.py  views.py
apps/bidding/: apps.py  models.py  services.py  urls.py  views.py
apps/budget/: apps.py  models.py  services.py  urls.py  views.py
apps/contracts/: apps.py  models.py
apps/core/: api.py  context_processors.py  feature_flags.py  logging_utils.py  managers.py  middleware.py  models.py  module_config.py
apps/costing/: apps.py
apps/crm/: apps.py  models.py
apps/documents/: apps.py
apps/einvoice/: apps.py  models.py  services.py  urls.py  views.py
apps/fx/: apps.py  models.py  services.py  urls.py  views.py
apps/guarantees/: apps.py  models.py  urls.py  views.py
apps/identity/: apps.py  audit.py  backends.py  context_processors.py  middleware.py  middleware_request_id.py  models.py  services.py
apps/input_docs/: apps.py  models.py
apps/inventory/: models.py
apps/ledger/: admin.py  apps.py  dnsn_api.py  dnsn_ledger_types.py
apps/loans/: apps.py  models.py  urls.py  views.py
apps/master_data/: admin.py  apps.py
apps/notifications/: apps.py  context_processors.py  models.py  services.py  urls.py  views.py
apps/payroll/: apps.py  models.py
apps/pkm/: admin.py  api.py  apps.py  fields.py  middleware.py  signals.py
apps/projects/: apps.py  models.py
apps/public/: apps.py  (+3 more)
config/: urls.py
docker/: README.md  entrypoint.sh  mariadb.cnf  nginx.conf
docs/: INDEX.md  PROMPT_EVAL_AUTOSCOPE.md  README.md
requirements/: base.txt  dev.txt  prod.txt
scripts/: backup.sh  deploy.sh  install_vendor_assets.sh  run_comprehensive_tests.py  visota-nginx.conf  visota-worker.service  visota.service
static/: manifest.json  sw.js
templates/: 403.html  404.html  500.html
test-evidence/: report.html
tests/: conftest.py  test_account_balance.py  test_account_type.py  test_accounting_books.py  test_all_tax_types.py  test_api.py  test_api_auth.py  test_approvals.py  test_asset_category.py  test_asset_model.py  test_asset_views.py  test_attachments.py  test_auth_backend.py  test_balance_sheet.py  test_banking.py  test_bhxh_rates.py  test_bidding.py  test_book_entry_register.py  test_budget.py  test_cash_flow_company_isolation.py  test_cash_flow_direct_offset.py  test_change_account_code.py  test_chart_of_accounts.py  test_cit_exemption.py  test_company_industry.py  test_company_model.py  test_contract_templates.py  test_contract_views.py  test_contracts.py  test_costing.py  test_crm.py  test_cross_flows.py  test_dashboard_view.py  test_depreciation_service.py  test_dnsn_balance_conversion.py  test_dnsn_entry_total_sign.py  test_dnsn_ledger_views.py  test_dnsn_models.py  test_dnsn_report_bugfixes.py  test_dnsn_reports.py  (+137 more)
(+610 files in other folders)
