[project]
name = "pmketoan"
version = "0.1.0"
description = "Vietnamese accounting software — PMKetoan"
requires-python = ">=3.12"
dependencies = [
    "Django>=5.2,<5.3",
    "django-ninja>=1.2",
    "mysqlclient>=2.2",
    "django-q2>=1.9",
    "django-extensions>=3.2",
    "django-debug-toolbar>=4.4",
    "django-allauth>=60.0",
    "django-axes>=6.5",
    "python-dateutil>=2.9",
    "PyYAML>=6.0",
    "weasyprint>=60.0",
    "openpyxl>=3.1",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "factory-boy>=3.3",
    "faker>=25.0",
    "pytest-xdist>=3.5",
    "ruff>=0.5",
    "mypy>=1.10",
    "django-stubs>=5.0",
    "pre-commit>=3.7",
    "ipython>=8.0",
    "ipdb>=0.13",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "-v --cov=apps --cov-report=term-missing --reuse-db"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "C4", "RET", "SIM"]

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]
strict = true

[[tool.mypy.overrides]]
module = "django.*"
ignore_missing_imports = true
