[project]
name = "pmketoan"
version = "0.1.0"
description = "Vietnamese accounting software — PMKetoan"
requires-python = ">=3.12"
dependencies = [
    "Django>=5.2,<5.3",
    "django-ninja>=1.2",
    "mysqlclient>=2.2",
    "django-q2>=1.9",
    "django-extensions>=3.2",
    "django-debug-toolbar>=4.4",
    "django-allauth>=60.0",
    "django-axes>=6.5",
    "python-dateutil>=2.9",
    "PyYAML>=6.0",
    "weasyprint>=60.0",
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "factory-boy>=3.3",
    "faker>=25.0",
    "pytest-xdist>=3.5",
    "ruff>=0.5",
    "mypy>=1.10",
    "django-stubs>=5.0",
    "pre-commit>=3.7",
    "ipython>=8.0",
    "ipdb>=0.13",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["migrations", "manage.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "C4", "C90", "RET", "SIM", "T20", "TD"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pylint]
max-args = 10

# Tech debt: require TODO comments to reference an issue
[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.vulture]
min_confidence = 80
paths = ["apps/"]

[tool.jscpd]
min-lines = 8
format = ["python"]
ignore = ["**/migrations/**", "**/__pycache__/**"]

[tool.importlinter]
root_packages = ["apps"]
[[tool.importlinter.contracts]]
name = "Layered architecture"
type = "layers"
layers = [
    "apps.ui_modern",
    "apps.banking | apps.bidding | apps.budget | apps.contracts | apps.crm | apps.einvoice | apps.fx | apps.guarantees | apps.inventory | apps.loans | apps.notifications | apps.payroll | apps.projects | apps.public | apps.purchasing | apps.recurring | apps.sales | apps.input_docs",
    "apps.ledger | apps.reporting | apps.costing | apps.hr | apps.assets | apps.documents | apps.approvals",
    "apps.master_data | apps.core | apps.identity",
]

[tool.deptry]
known_first_party = ["apps"]
exclude = ["migrations", "tests", ".venv"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "-v --cov=apps --cov-report=term-missing --cov-fail-under=30 --reuse-db"

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]
strict = true

[[tool.mypy.overrides]]
module = "django.*"
ignore_missing_imports = true
